Fix tutorial not working properly with fixed elements (sidebar in desktop mode won't allow to click the expected element, as browser seems to ignore z-index when the two elements has position fixed)

--- a/game-frontend/projects/game-frontend/src/app/components/tutorial-overlay/tutorial-overlay.component.scss
+++ b/game-frontend/projects/game-frontend/src/app/components/tutorial-overlay/tutorial-overlay.component.scss
@@ -39,14 +39,14 @@ span.tutorial-text {
 app-tutorial-overlay {
     .tutorial-overlay {
         position: absolute;
+        pointer-events: none;
         top: 0px;
         left: 0px;
         width: 100%;
         height: 100%;
         z-index: 65532;
-        background-color: rgba($color: #88B, $alpha: 0.4);
-
         svg{
+            pointer-events: none;
             top: 0px;
             left: 0px;
             position: absolute;
